# uacpi-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: docs.yml
src/: lib.rs
uacpi/: Cargo.toml
uacpi-sys/: Cargo.toml  build.rs  wrapper.h
uacpi/src/: kernel_api.rs  lib.rs  libc_impl.rs  namespace.rs  sleep.rs  tables.rs  types.rs  utils.rs
